load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "glider",
    # References container_pull from WORKSPACE (above)
    base = "@alphine_base//image",
    files = ["@glider-v0.6.3//:glider-src"],
    cmd = ["/ glider"],
)

container_push(
  name = "publish",
  image = ":glider",

  format = "Docker",

  # Any of these components may have variables.
  registry = "index.docker.io",
  repository = "rickyp999/glider",
  tag = "0.6.3",
  # Trigger stamping.
  stamp = True,
)
